Delombok `KlangCompilerConfig`: - buggy generated builder when packaged to jar - ignored defaults for target formats and instead generated asm AND jbc when no flags were provided